--- a/Angular assignments/Assignment2-july 28/asgnt2.html
+++ b/Angular assignments/Assignment2-july 28/asgnt2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-    <script src="ext.js">    </script>
+    <script src="ext.js">  </script>
 </head>
 <body>
-    <button onclick="fn()"> Show Results</button>
+    <button onclick="Result()"> Show Results</button>
 </body>
 </html>
